# CGLab

./: README.md
Executables/HW0/: TransformVertexShader.glsl
Executables/HW1/: FragmentShader.glsl  VertexShader.glsl
Executables/HW2/Resources/Images/: i-lab.ppm  i-rocky.ppm  n-brick.ppm  n-concrete.ppm
Executables/HW2/Resources/Shaders/: f-blur.frag  f-default.frag  f-lighting.frag
Executables/HW3/Resources/Models/: Glock.mtl
Executables/HW3/Resources/Shaders/: Depth.frag  Display.vert
OpenGLTutorial/: CMakeLists.txt
OpenGLTutorial/Skeleton/: TransformVertexShader.glsl
OpenGLTutorial/common/: model.hpp  primitives.cpp  primitives.hpp
Project/: CMakeLists.txt
Project/HW0/Skeleton/: main.cpp
Project/HW1/Skeleton/: FragmentShader.glsl  main.cpp
Project/HW1/common/: geometry.hpp  model.cpp  shader.cpp
Project/HW2/Resources/Images/: i-brick.ppm  n-blank.ppm
Project/HW2/Resources/Shaders/: v-default.vert
Project/HW2/Sources/: Main.cpp
Project/HW2/Sources/App/: App.hpp  DisplayModel.cpp  DisplayModel.hpp  MobileNodeModel.cpp  MobileNodeModel.hpp  MobileWireModel.cpp  MobileWireModel.hpp  Shape.cpp  Shape.hpp  WallModel.cpp  WallModel.hpp
Project/HW2/Sources/Engine/: Engine.hpp  FBO.cpp  FBO.hpp  Light.hpp  Material.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Project/HW3/Resources/Shaders/: Depth.vert  Display.frag
Project/HW3/Scripts/: GenerateBrush.py
Project/HW3/Sources/: Main.cpp
Project/HW3/Sources/App/: DisplayModel.cpp  DisplayModel.hpp  GeneralModel.hpp  LandModel.cpp  LandModel.hpp  SkyModel.hpp
Project/HW3/Sources/Engine/: FrameBuffer.cpp  Light.hpp  LightModel.hpp  Model.hpp  Program.hpp  Renderer.cpp  Shader.cpp  Shader.hpp  ShadowModel.hpp
Project/Libraries/: CMakeLists.txt
Sources/HW1/Skeleton/: main.cpp
Sources/HW1/common/: affine.hpp  geometry.hpp  model.hpp
Sources/HW2/: CMakeLists.txt
Sources/HW2/Resources/Shaders/: f-blur.frag  f-default.frag  v-default.vert
Sources/HW2/Sources/: Main.cpp
Sources/HW2/Sources/App/: App.hpp  DisplayModel.cpp  DisplayModel.hpp  MobileNodeModel.cpp  MobileNodeModel.hpp  MobileWireModel.cpp  MobileWireModel.hpp  Shape.cpp  Shape.hpp  WallModel.cpp  WallModel.hpp
Sources/HW2/Sources/Engine/: Engine.hpp  FBO.cpp  FBO.hpp  Light.hpp  Material.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Sources/HW3/: CMakeLists.txt
Sources/HW3/Resources/Models/: Cat.mtl
Sources/HW3/Resources/Shaders/: Draw.vert
Sources/HW3/Sources/App/: App.hpp  ExternalModel.cpp  ExternalModel.hpp  GeneralModel.cpp  SkyModel.cpp
Sources/HW3/Sources/Engine/: Engine.cpp  Engine.hpp  FrameBuffer.hpp  Model.cpp  OBJModel.hpp  Program.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  TextureModel.hpp
Sources/Tutorial/Skeleton/: main.cpp
Sources/Tutorial/common/: geometry.hpp  model.cpp
